--- a/app/views/competentions/edit.html.haml
+++ b/app/views/competentions/edit.html.haml
@@ -2,6 +2,6 @@
 
 = render 'form'
 
-= link_to 'Show', @competention
+= link_to 'Показать', @competention
 \|
-= link_to 'Back', competentions_path
+= link_to 'Назад', competentions_path
