--- a/app/views/competentions/show.html.haml
+++ b/app/views/competentions/show.html.haml
@@ -10,6 +10,6 @@
   %b Isdone:
   = @competention.isdone
 
-= link_to 'Edit', edit_competention_path(@competention)
+= link_to 'Изменить', edit_competention_path(@competention)
 \|
-= link_to 'Back', competentions_path
+= link_to 'Назад', competentions_path
